# kubepilot

./: .gitignore  ARCHITECTURE_AND_ROADMAP.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  local-cluster-smoke.yml
agent/: __init__.py  kubepilot_agent.py
agent/answers/: __init__.py  prompts.py  synthesis.py
agent/graph/: __init__.py  intents.py  workflow.py
agent/incidents/: __init__.py  reports.py
agent/llm/: __init__.py  providers.py
agent/state/: __init__.py  chat.py
agent/tools/kubernetes/: __init__.py  client.py  diagnosis.py  (+2 more)
demo/kubernetes/: README.md  checkout-broken.yaml  metrics-scraper-broken.yaml  namespace.yaml
docs/: local-cluster.md
docs/runbooks/: deployment-rollout-failures.md  pod-restarts.md  rolling-restart.md  unhealthy-workloads.md
gitops/argocd/: kubepilot-application.yaml
helm/kubepilot/: Chart.yaml  values.yaml
monitoring/: grafana-dashboard.json  prometheus.yml
rag/: __init__.py  cli.py  embeddings.py  evaluation.py  indexing.py  models.py
rag/chunking/: __init__.py  markdown.py
rag/loaders/: __init__.py  markdown.py
rag/retrieval/: __init__.py  keyword.py  vector.py
scripts/: demo.sh  kind-demo.sh  local-cluster-smoke.sh  web-smoke.sh
services/k8s-tool/: Dockerfile  go.mod
tests/agent/: test_answer_synthesis.py  test_graph_intents.py  test_kubepilot_agent.py  test_llm_providers.py
tests/api/: conftest.py  test_audit.py  test_auth.py  test_chat.py  test_chat_service.py  test_cluster.py  test_cluster_service.py  test_health.py  test_incident_report.py  test_knowledge.py  test_local_cluster.py  test_otel.py  test_policy.py  test_rate_limit.py  test_status.py  test_tracing.py
tests/fixtures/: networkpolicy-values.yaml  retrieval-evaluation.jsonl
tests/rag/: test_evaluation.py  test_indexing.py  test_markdown_loader.py  test_retrieval.py
web/: Dockerfile  README.md  app.js  index.html  nginx.conf  styles.css
(+34 files in other folders)
