[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kubepilot"
version = "0.1.0"
description = "AI-powered Kubernetes operations platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.scripts]
kubepilot-index = "rag.cli:main"
kubepilot-evaluate-retrieval = "rag.cli:evaluate"

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.8,<1.0",
]
kubernetes = [
    "kubernetes>=30.0,<31.0",
]
rag = [
    "faiss-cpu>=1.8,<2.0",
    "numpy>=1.26,<3.0",
]
agent = [
    "langgraph>=0.2,<1.0",
]
all = [
    "kubernetes>=30.0,<31.0",
    "faiss-cpu>=1.8,<2.0",
    "numpy>=1.26,<3.0",
    "langgraph>=0.2,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["services/api/kubepilot_api", "agent", "rag"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = [".", "services/api"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
